# skaffold-buildpack

./: README.md  main.py  pyproject.toml  skaffold.yaml
api/: api.py
api/endpoints/: hello.py
k8s/: manifest.yaml
