[tool.poetry]
name = "skaffold-buildpack"
version = "0.1.0"
description = ""
authors = ["Tomoyuki Tanigaki <68139726+ttani03@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
